--- a/Raspberry-Pi/code/WebRpi/requirements.txt
+++ b/Raspberry-Pi/code/WebRpi/requirements.txt
@@ -4,6 +4,7 @@ importlib-metadata==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+psutil==5.9.4
 RPi.GPIO==0.7.1
 smbus==1.1.post2
 waitress==2.1.2
